add new version

--- a/photos.html
+++ b/photos.html
@@ -41,50 +41,50 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html">publications</a> | <a href="documents.html">documents</a> | <a href="photos.html"><em>photos</em></a> | <a href="blog/2017-10-23.html">blog/2017-10-23</a> | <a href="blog/2017-10-25.html">blog/2017-10-25</a> | <a href="blog/2017-10-24.html">blog/2017-10-24</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html"><em>photos</em></a> | <a href="documents.html">documents</a> | <a href="publications.html">publications</a></p>
 
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>A small selection of some photos.</p>
-<p><a href="photos/large/IMG_4436.JPG" target="_blank"><img src="photos/small/IMG_4436.JPG" /></a>
-<a href="photos/large/IMG_9320.JPG" target="_blank"><img src="photos/small/IMG_9320.JPG" /></a>
-<a href="photos/large/IMG_5971_.jpg" target="_blank"><img src="photos/small/IMG_5971_.jpg" /></a>
-<a href="photos/large/IMG_8968.JPG" target="_blank"><img src="photos/small/IMG_8968.JPG" /></a>
-<a href="photos/large/IMG_7955.JPG" target="_blank"><img src="photos/small/IMG_7955.JPG" /></a>
-<a href="photos/large/IMG_3049_0.jpg" target="_blank"><img src="photos/small/IMG_3049_0.jpg" /></a>
-<a href="photos/large/IMG_9671.JPG" target="_blank"><img src="photos/small/IMG_9671.JPG" /></a>
-<a href="photos/large/IMG_5424.JPG" target="_blank"><img src="photos/small/IMG_5424.JPG" /></a>
-<a href="photos/large/IMG_8918.JPG" target="_blank"><img src="photos/small/IMG_8918.JPG" /></a>
-<a href="photos/large/IMG_5983.JPG" target="_blank"><img src="photos/small/IMG_5983.JPG" /></a>
+<p><a href="photos/large/IMG_8918.JPG" target="_blank"><img src="photos/small/IMG_8918.JPG" /></a>
 <a href="photos/large/IMG_7753.JPG" target="_blank"><img src="photos/small/IMG_7753.JPG" /></a>
-<a href="photos/large/IMG_4140.JPG" target="_blank"><img src="photos/small/IMG_4140.JPG" /></a>
-<a href="photos/large/IMG_5936.JPG" target="_blank"><img src="photos/small/IMG_5936.JPG" /></a>
-<a href="photos/large/IMG_6976.JPG" target="_blank"><img src="photos/small/IMG_6976.JPG" /></a>
-<a href="photos/large/IMG_8890.JPG" target="_blank"><img src="photos/small/IMG_8890.JPG" /></a>
-<a href="photos/large/IMG_6010.JPG" target="_blank"><img src="photos/small/IMG_6010.JPG" /></a>
-<a href="photos/large/IMG_9326.JPG" target="_blank"><img src="photos/small/IMG_9326.JPG" /></a>
-<a href="photos/large/IMG_4291.JPG" target="_blank"><img src="photos/small/IMG_4291.JPG" /></a>
-<a href="photos/large/IMG_6177_golden_2.JPG" target="_blank"><img src="photos/small/IMG_6177_golden_2.JPG" /></a>
-<a href="photos/large/IMG_7187.JPG" target="_blank"><img src="photos/small/IMG_7187.JPG" /></a>
-<a href="photos/large/IMG_7141.JPG" target="_blank"><img src="photos/small/IMG_7141.JPG" /></a>
-<a href="photos/large/IMG_3995.JPG" target="_blank"><img src="photos/small/IMG_3995.JPG" /></a>
-<a href="photos/large/IMG_1665.JPG" target="_blank"><img src="photos/small/IMG_1665.JPG" /></a>
-<a href="photos/large/IMG_9401.JPG" target="_blank"><img src="photos/small/IMG_9401.JPG" /></a>
-<a href="photos/large/OUT_8905.jpg" target="_blank"><img src="photos/small/OUT_8905.jpg" /></a>
-<a href="photos/large/IMG_4922_.jpg" target="_blank"><img src="photos/small/IMG_4922_.jpg" /></a>
-<a href="photos/large/IMG_5984.JPG" target="_blank"><img src="photos/small/IMG_5984.JPG" /></a>
+<a href="photos/large/IMG_7817.JPG" target="_blank"><img src="photos/small/IMG_7817.JPG" /></a>
+<a href="photos/large/IMG_5983.JPG" target="_blank"><img src="photos/small/IMG_5983.JPG" /></a>
 <a href="photos/large/IMG_5982.JPG" target="_blank"><img src="photos/small/IMG_5982.JPG" /></a>
-<a href="photos/large/IMG_4110.JPG" target="_blank"><img src="photos/small/IMG_4110.JPG" /></a>
-<a href="photos/large/IMG_6255_.JPG" target="_blank"><img src="photos/small/IMG_6255_.JPG" /></a>
-<a href="photos/large/IMG_6258__.JPG" target="_blank"><img src="photos/small/IMG_6258__.JPG" /></a>
+<a href="photos/large/IMG_5936.JPG" target="_blank"><img src="photos/small/IMG_5936.JPG" /></a>
+<a href="photos/large/IMG_3049_0.jpg" target="_blank"><img src="photos/small/IMG_3049_0.jpg" /></a>
+<a href="photos/large/IMG_3995.JPG" target="_blank"><img src="photos/small/IMG_3995.JPG" /></a>
+<a href="photos/large/IMG_5984.JPG" target="_blank"><img src="photos/small/IMG_5984.JPG" /></a>
 <a href="photos/large/IMG_4480.JPG" target="_blank"><img src="photos/small/IMG_4480.JPG" /></a>
-<a href="photos/large/IMG_3867_4.jpg" target="_blank"><img src="photos/small/IMG_3867_4.jpg" /></a>
+<a href="photos/large/IMG_7187.JPG" target="_blank"><img src="photos/small/IMG_7187.JPG" /></a>
+<a href="photos/large/IMG_9401.JPG" target="_blank"><img src="photos/small/IMG_9401.JPG" /></a>
+<a href="photos/large/IMG_6976.JPG" target="_blank"><img src="photos/small/IMG_6976.JPG" /></a>
+<a href="photos/large/OUT_8905.jpg" target="_blank"><img src="photos/small/OUT_8905.jpg" /></a>
+<a href="photos/large/IMG_4140.JPG" target="_blank"><img src="photos/small/IMG_4140.JPG" /></a>
+<a href="photos/large/IMG_7955.JPG" target="_blank"><img src="photos/small/IMG_7955.JPG" /></a>
+<a href="photos/large/IMG_6177_golden_2.JPG" target="_blank"><img src="photos/small/IMG_6177_golden_2.JPG" /></a>
+<a href="photos/large/blume.jpg" target="_blank"><img src="photos/small/blume.jpg" /></a>
+<a href="photos/large/IMG_5424.JPG" target="_blank"><img src="photos/small/IMG_5424.JPG" /></a>
+<a href="photos/large/IMG_6258__.JPG" target="_blank"><img src="photos/small/IMG_6258__.JPG" /></a>
+<a href="photos/large/IMG_4922_.jpg" target="_blank"><img src="photos/small/IMG_4922_.jpg" /></a>
+<a href="photos/large/IMG_8890.JPG" target="_blank"><img src="photos/small/IMG_8890.JPG" /></a>
 <a href="photos/large/IMG_8886.JPG" target="_blank"><img src="photos/small/IMG_8886.JPG" /></a>
 <a href="photos/large/IMG_6215_california.JPG" target="_blank"><img src="photos/small/IMG_6215_california.JPG" /></a>
-<a href="photos/large/IMG_7817.JPG" target="_blank"><img src="photos/small/IMG_7817.JPG" /></a>
-<a href="photos/large/blume.jpg" target="_blank"><img src="photos/small/blume.jpg" /></a>
-<a href="photos/large/IMG_7392_.JPG" target="_blank"><img src="photos/small/IMG_7392_.JPG" /></a></p>
+<a href="photos/large/IMG_6010.JPG" target="_blank"><img src="photos/small/IMG_6010.JPG" /></a>
+<a href="photos/large/IMG_6255_.JPG" target="_blank"><img src="photos/small/IMG_6255_.JPG" /></a>
+<a href="photos/large/IMG_9320.JPG" target="_blank"><img src="photos/small/IMG_9320.JPG" /></a>
+<a href="photos/large/IMG_5971_.jpg" target="_blank"><img src="photos/small/IMG_5971_.jpg" /></a>
+<a href="photos/large/IMG_4436.JPG" target="_blank"><img src="photos/small/IMG_4436.JPG" /></a>
+<a href="photos/large/IMG_9671.JPG" target="_blank"><img src="photos/small/IMG_9671.JPG" /></a>
+<a href="photos/large/IMG_8968.JPG" target="_blank"><img src="photos/small/IMG_8968.JPG" /></a>
+<a href="photos/large/IMG_7141.JPG" target="_blank"><img src="photos/small/IMG_7141.JPG" /></a>
+<a href="photos/large/IMG_4291.JPG" target="_blank"><img src="photos/small/IMG_4291.JPG" /></a>
+<a href="photos/large/IMG_3867_4.jpg" target="_blank"><img src="photos/small/IMG_3867_4.jpg" /></a>
+<a href="photos/large/IMG_4110.JPG" target="_blank"><img src="photos/small/IMG_4110.JPG" /></a>
+<a href="photos/large/IMG_9326.JPG" target="_blank"><img src="photos/small/IMG_9326.JPG" /></a>
+<a href="photos/large/IMG_7392_.JPG" target="_blank"><img src="photos/small/IMG_7392_.JPG" /></a>
+<a href="photos/large/IMG_1665.JPG" target="_blank"><img src="photos/small/IMG_1665.JPG" /></a></p>
 
 
         </section>
