--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html"><em>start</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html">publications</a></p>
+        <p><a href="index.html"><em>start</em></a> | <a href="photos.html">photos</a> | <a href="publications.html">publications</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
@@ -52,7 +52,7 @@ Currently I'm working at the <a href="http://www.tu-ilmenau.de/en/audio-visual-t
 <p>I will share some of my projects and research papers on this page.
 Most of my developed software is publicly available on github.</p>
 <h2>research</h2>
-<p>My current research intersts are video/image quality prediction, image appeal combined with machine learning and processing of large datasets.</p>
+<p>My current research interests are video/image quality prediction, image appeal combined with machine learning and processing of large datasets.</p>
 <p>For more checkout my <a href="publications.html">Publications</a>.</p>
 <h2>projects</h2>
 <p>Here are some of my projects:</p>
