--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a> | <a href="blog/2017-10-23.html">blog/2017-10-23</a> | <a href="blog/2017-10-25.html">blog/2017-10-25</a> | <a href="blog/2017-10-24.html">blog/2017-10-24</a></p>
 
         </section>
         <hr>
@@ -49,6 +49,12 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Ashutosh Singla, Steve G&#246;ring, Alexander Raake, Rob Koenen, Britta Meixner, and Thomas Buchholz. <b>"Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos." </b><i>10th ACM Multimedia Systems Conference</i>. Amherst, MA, USA.
+	2019.
+	
+		&#160;<a href="./bibs/singla2019.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
 	to appear.
 	
