remove blog things

--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a> | <a href="blog/2017-10-23.html">blog/2017-10-23</a> | <a href="blog/2017-10-25.html">blog/2017-10-25</a> | <a href="blog/2017-10-24.html">blog/2017-10-24</a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
 
         </section>
         <hr>
