--- a/publications.html
+++ b/publications.html
@@ -49,15 +49,24 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"nofu - A Lightweight No-Reference Pixel Based Video Quality Model for Gaming QoE." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2019)</i>. Berlin, Germany.
+	June&#160;2019.
+	to appear.
+	
+		&#160;<a href="./bibs/goering2019qomex.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Ashutosh Singla, Steve G&#246;ring, Alexander Raake, Rob Koenen, Britta Meixner, and Thomas Buchholz. <b>"Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos." </b><i>10th ACM Multimedia Systems Conference</i>. Amherst, MA, USA.
 	2019.
+	to appear.
 	
 		&#160;<a href="./bibs/singla2019.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
+  <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b>2019.
 	to appear.
 	
+		&#160;<a href="https://www.ingentaconnect.com/content/ist/ei/pre-prints/content-ei2019-hvei-215;jsessionid=3hkwbc6tro23a.x-ic-live-01#Cits">[url]</a>
 		&#160;<a href="./bibs/goering2019.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
