--- a/publications.html
+++ b/publications.html
@@ -51,8 +51,8 @@
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"nofu - A Lightweight No-Reference Pixel Based Video Quality Model for Gaming Content." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2019)</i>. Berlin, Germany.
 	June&#160;2019.
-	to appear.
 	
+		&#160;<a href="./pdfs/2019/nofu_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./bibs/goering2019qomex.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
@@ -64,10 +64,11 @@
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b>2019.
-	to appear.
 	
 		&#160;<a href="https://www.ingentaconnect.com/content/ist/ei/pre-prints/content-ei2019-hvei-215;jsessionid=3hkwbc6tro23a.x-ic-live-01#Cits">[url]</a>
-		&#160;<a href="./bibs/goering2019.bib" target="_blank">[bib]</a></p>
+		&#160;<a href="./pdfs/2019/uhd_hd_paper.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/goering2019.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2019/uhd_hd_paper_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Stephan Fremerey, Rachel Huang, Steve G&#246;ring, and Alexander Raake. <b>"Are people pixel-peeping 360&#176; videos?." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
