--- a/publications.html
+++ b/publications.html
@@ -87,8 +87,8 @@
 	2018.
 	
 	     pp.&#160;1--6.
-	to appear.
 	
+		&#160;<a href="https://ieeexplore.ieee.org/document/8611703">[url]</a>
 		&#160;<a href="./bibs/goering2018Deimeq.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2018/deimeq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
