added nofu slides

--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,8 @@
 	June&#160;2019.
 	
 		&#160;<a href="./pdfs/2019/nofu_paper.pdf" target="_blank">[pdf]</a>
-		&#160;<a href="./bibs/goering2019qomex.bib" target="_blank">[bib]</a></p>
+		&#160;<a href="./bibs/goering2019qomex.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2019/nofu_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Ashutosh Singla, Steve G&#246;ring, Alexander Raake, Rob Koenen, Britta Meixner, and Thomas Buchholz. <b>"Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos." </b><i>10th ACM Multimedia Systems Conference</i>. Amherst, MA, USA.
