--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="http://github.com/stg7/" target="_blank">
-                    <img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" style="height:1.5em" />
+                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="height:1.5em" />
                     </a>
                 </li>
             </ul>
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
 
         </section>
         <hr>
