--- a/publications.html
+++ b/publications.html
@@ -57,9 +57,14 @@
 		&#160;<a href="./pdfs/2019/nofu_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
+  <p class="bibentry">Ashutosh Singla, Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols." </b><i>26th IEEE Conference on Virtual Reality and 3D User Interfaces</i>. Osaka, Japan.
+	03&#160;2019.
+	
+		&#160;<a href="./bibs/singla2019vr.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Ashutosh Singla, Steve G&#246;ring, Alexander Raake, Rob Koenen, Britta Meixner, and Thomas Buchholz. <b>"Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos." </b><i>10th ACM Multimedia Systems Conference</i>. Amherst, MA, USA.
 	2019.
-	to appear.
 	
 		&#160;<a href="./bibs/singla2019.bib" target="_blank">[bib]</a></p>
 </p>
