--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Ashutosh Singla, Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols." </b><i>26th IEEE Conference on Virtual Reality and 3D User Interfaces</i>. Osaka, Japan.
-	03&#160;2019.
+	March&#160;2019.
 	
 		&#160;<a href="./bibs/singla2019vr.bib" target="_blank">[bib]</a></p>
 </p>
