add missing presentation and update publication list

--- a/publications.html
+++ b/publications.html
@@ -52,9 +52,17 @@
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"nofu - A Lightweight No-Reference Pixel Based Video Quality Model for Gaming Content." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2019)</i>. Berlin, Germany.
 	June&#160;2019.
 	
+		&#160;<a href="https://ieeexplore.ieee.org/document/8743262">[url]</a>
 		&#160;<a href="./pdfs/2019/nofu_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./bibs/goering2019qomex.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2019/nofu_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Stephan Fremerey, Frank Hofmeyer, Steve G&#246;ring, and Alexander Raake. <b>"Impact of Various Motion Interpolation Algorithms on 360&#176; Video QoE." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX)</i>. June&#160;2019.
+	
+	     pp.&#160;1-3.
+	
+		&#160;<a href="./bibs/fremerey2019qomex.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Ashutosh Singla, Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols." </b><i>26th IEEE Conference on Virtual Reality and 3D User Interfaces</i>. Osaka, Japan.
@@ -78,13 +86,11 @@
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Stephan Fremerey, Rachel Huang, Steve G&#246;ring, and Alexander Raake. <b>"Are people pixel-peeping 360&#176; videos?." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
-	to appear.
 	
 		&#160;<a href="./bibs/fremerey2019.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging</i>. 2019.
-	to appear.
 	
 		&#160;<a href="./bibs/rao2019.bib" target="_blank">[bib]</a></p>
 </p>
@@ -132,6 +138,7 @@
 	
 		&#160;<a href="./pdfs/2017/qomex_enc_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./bibs/goering2017_81.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2017/qomex_enc_slides.pdf" target="_blank">[slides]</a>
 		&#160;<a href="./pdfs/2017/qomex_enc_poster.pdf" target="_blank">[poster]</a></p>
 </p>
 <p  class="bibentries-one-year">
