--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html"><em>start</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html">publications</a></p>
+        <p><a href="index.html"><em>start</em></a> | <a href="publications.html">publications</a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
 
         </section>
         <hr>
@@ -67,8 +67,12 @@ Most of my developed software is publicly available on github.</p>
 <p>You can find more on my <a href="http://github.com/stg7/" target="_blank">github</a> page.</p>
 <h2>contact</h2>
 <ul>
-<li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
-<li>xmpp: stg7@jabber.ccc.de</li>
+<li>
+<p>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></p>
+</li>
+<li>
+<p>xmpp: stg7@jabber.ccc.de</p>
+</li>
 </ul>
 <h2>about</h2>
 <p>This webpage is generated using a small python script + a markdown parser.
