--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
 
         </section>
         <hr>
@@ -49,6 +49,14 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"Evaluation of Intra-coding based image compression." </b><i>Visual Information Processing (EUVIP), 2019 8th European Workshop on</i>. IEEE.
+	2019.
+	
+	     pp.&#160;1--6.
+	
+		&#160;<a href="./bibs/goering2019Intra.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"nofu - A Lightweight No-Reference Pixel Based Video Quality Model for Gaming Content." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2019)</i>. Berlin, Germany.
 	June&#160;2019.
 	
