--- a/documents.html
+++ b/documents.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html">publications</a> | <a href="documents.html"><em>documents</em></a> | <a href="photos.html">photos</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html"><em>documents</em></a> | <a href="publications.html">publications</a></p>
 
         </section>
         <hr>
@@ -50,36 +50,16 @@
 <h2>math</h2>
 <p>Documents for school math, e.g. example tasks for specific topics.</p>
 <ul>
-<li>
-<p><a href="docs/mathe/funktionen.pdf">funktionen</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/expo.pdf">expo</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/pr%C3%BCfungsmix.pdf">prüfungsmix</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/wktrechnung.pdf">wktrechnung</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/dreieck.pdf">dreieck</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/vektoren_%C3%BCbungsaufgaben.pdf">vektoren_übungsaufgaben</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/testpr%C3%BCfung_aufgaben.pdf">testprüfung_aufgaben</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/misch.pdf">misch</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/vektoren.pdf">vektoren</a></p>
-</li>
-<li>
-<p><a href="docs/mathe/fl%C3%A4che.pdf">fläche</a></p>
-</li>
+<li><a href="docs/mathe/funktionen.pdf">funktionen</a></li>
+<li><a href="docs/mathe/expo.pdf">expo</a></li>
+<li><a href="docs/mathe/pr%C3%BCfungsmix.pdf">prüfungsmix</a></li>
+<li><a href="docs/mathe/wktrechnung.pdf">wktrechnung</a></li>
+<li><a href="docs/mathe/dreieck.pdf">dreieck</a></li>
+<li><a href="docs/mathe/vektoren_%C3%BCbungsaufgaben.pdf">vektoren_übungsaufgaben</a></li>
+<li><a href="docs/mathe/testpr%C3%BCfung_aufgaben.pdf">testprüfung_aufgaben</a></li>
+<li><a href="docs/mathe/misch.pdf">misch</a></li>
+<li><a href="docs/mathe/vektoren.pdf">vektoren</a></li>
+<li><a href="docs/mathe/fl%C3%A4che.pdf">fläche</a></li>
 </ul>
 <h2>university</h2>
 <p>Scripts, solutions or summaries of some university courses/tasks.</p>
