--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
 
         </section>
         <hr>
@@ -49,11 +49,26 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"Evaluation of Intra-coding based image compression." </b><i>Visual Information Processing (EUVIP), 2019 8th European Workshop on</i>. IEEE.
+  <p class="bibentry">Steve G&#246;ring, Christopher Kr&#228;mmer, and Alexander Raake. <b>"cencro -- Speedup of Video Quality Calculation using Center Cropping." </b><i>2019 IEEE ISM</i>. Dec&#160;2019.
+	
+	     pp.&#160;1-8.
+	
+		&#160;<a href="./bibs/goering2019cencro.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Werner Robitza, Bernhard Feiten, and Alexander Raake. <b>"AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1." </b><i>2019 IEEE ISM</i>. Dec&#160;2019.
+	
+	     pp.&#160;1-8.
+	
+		&#160;<a href="./bibs/rao2019Db.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"Evaluation of Intra-coding based image compression." </b><i>2019 8th European Workshop on Visual Information Processing (EUVIP),</i>. IEEE.
 	2019.
 	
 	     pp.&#160;1--6.
 	
+		&#160;<a href="https://git.io/Je0ip" target="_blank">[demo]</a>
 		&#160;<a href="./bibs/goering2019Intra.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
