add slides of my talk

--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,8 @@
 	     pp.&#160;1--6.
 	
 		&#160;<a href="https://git.io/Je0ip" target="_blank">[demo]</a>
-		&#160;<a href="./bibs/goering2019Intra.bib" target="_blank">[bib]</a></p>
+		&#160;<a href="./bibs/goering2019Intra.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2019/image_comp_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"nofu - A Lightweight No-Reference Pixel Based Video Quality Model for Gaming Content." </b><i>2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2019)</i>. Berlin, Germany.
