--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,8 @@
 	
 	     pp.&#160;1-8.
 	
-		&#160;<a href="./bibs/goering2019cencro.bib" target="_blank">[bib]</a></p>
+		&#160;<a href="./bibs/goering2019cencro.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2019/cencro_presentation.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Werner Robitza, Bernhard Feiten, and Alexander Raake. <b>"AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1." </b><i>2019 IEEE ISM</i>. Dec&#160;2019.
