update bib entries for ISM

--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring, Christopher Kr&#228;mmer, and Alexander Raake. <b>"cencro -- Speedup of Video Quality Calculation using Center Cropping." </b><i>2019 IEEE ISM</i>. Dec&#160;2019.
+  <p class="bibentry">Steve G&#246;ring, Christopher Kr&#228;mmer, and Alexander Raake. <b>"cencro -- Speedup of Video Quality Calculation using Center Cropping." </b><i>21st IEEE International Symposium on Multimedia (2019 IEEE ISM)</i>. Dec&#160;2019.
 	
 	     pp.&#160;1-8.
 	
@@ -57,7 +57,7 @@
 		&#160;<a href="./pdfs/2019/cencro_presentation.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Werner Robitza, Bernhard Feiten, and Alexander Raake. <b>"AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1." </b><i>2019 IEEE ISM</i>. Dec&#160;2019.
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Werner Robitza, Bernhard Feiten, and Alexander Raake. <b>"AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1." </b><i>21st IEEE International Symposium on Multimedia (2019 IEEE ISM)</i>. Dec&#160;2019.
 	
 	     pp.&#160;1-8.
 	
