add missing paper

--- a/publications.html
+++ b/publications.html
@@ -126,6 +126,7 @@
 	     pp.&#160;1--6.
 	
 		&#160;<a href="https://ieeexplore.ieee.org/document/8611703">[url]</a>
+		&#160;<a href="./pdfs/2018/deimeq_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./bibs/goering2018Deimeq.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2018/deimeq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
