--- a/publications.html
+++ b/publications.html
@@ -137,10 +137,12 @@
 		&#160;<a href="./bibs/Robitza2017d.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Werner Robitza, Dhananjay Kittur, Alexander Dethof, Steve G&#246;ring, Bernhard Feiten, and Alexander Raake. <b>"Measuring YouTube QoE Under Constrained Bandwidth Conditions - Comparing Classical and Behavioral Monitoring." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
-	5&#160;2018.
+  <p class="bibentry">Robitza, Werner, Kittur, Dhananjaya G, Dethof, Alexander M, G&#246;rin, Steve, Feiten, Bernhard, and Raake, Alexander. <b>"Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX)</i>. IEEE.
+	2018.
 	
-		&#160;<a href="./bibs/Robi1805_Measuring.bib" target="_blank">[bib]</a></p>
+	     pp.&#160;1--6.
+	
+		&#160;<a href="./bibs/robitza2018measuring.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Konstantin Brand, and Alexander Raake. <b>"Extended Features using Machine Learning Techniques for Photo Liking Prediction." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
