add new publications

--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,12 @@
 	
 		&#160;<a href="./bibs/rao2020p1204.bib" target="_blank">[bib]</a></p>
 </p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Werner Robitza, Alexander M. Dethof, Steve G&#246;ring, Alexander Raake, Tim Polzehl, and Andre Beyer. <b>"Are You Still Watching? Streaming Video Quality and Engagement Assessment in the Crowd." </b><i>2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)</i>. Athlone, Ireland.
+	May&#160;2020.
+	
+		&#160;<a href="./bibs/robitza2020.bib" target="_blank">[bib]</a></p>
+</p>
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Christopher Kr&#228;mmer, and Alexander Raake. <b>"cencro -- Speedup of Video Quality Calculation using Center Cropping." </b><i>21st IEEE International Symposium on Multimedia (2019 IEEE ISM)</i>. Dec&#160;2019.
 	
