--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,48 @@
 
         <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
 
+        <script type="text/javascript">
+
+
+            function http_get(theUrl) {
+                // based on https://stackoverflow.com/a/4033310
+                var xmlHttp = new XMLHttpRequest();
+                xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
+                xmlHttp.send( null );
+                return xmlHttp.responseText;
+            }
+
+
+            function add_top5_repos() {
+                request_url = "https://api.github.com/users/stg7/repos?sort=created&type=public";
+                console.log(request_url);
+                res = JSON.parse(http_get(request_url));
+                console.log(res);
+                var result_div = document.getElementById("top-5-projects");
+                var result_list = document.createElement("ul");
+
+                res.filter(repo => !repo["fork"]).slice(0, 5).forEach(
+                    function(repo) {
+                        console.log(repo["name"], repo["html_url"], repo["description"]);
+                        var list_element = document.createElement("li");
+                        list_element.innerHTML = "<a href='" + repo["html_url"] + "' ><font id='reponame'> " + repo["name"] + "</font></a>: " + repo["description"] + "";
+
+                        result_list.append(list_element);
+
+                    }
+                )
+
+                result_div.append(result_list);
+
+                //console.log(res);
+            }
+
+
+            document.addEventListener("DOMContentLoaded", function(){
+                add_top5_repos();
+            });
+
+        </script>
   </head>
 
   <body>
@@ -41,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
