--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 		&#160;<a href="./bibs/goering2020prenc.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Werner Robitza, Alexander Raake, Bernhard Feiten, Peter List, and Ulf W&#252;stenhagen. <b>"Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation." </b><i>2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)</i>. Athlone, Ireland.
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Peter List, Werner Robitza, Bernhard Feiten, Ulf W&#252;stenhagen, and Alexander Raake. <b>"Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation." </b><i>2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)</i>. Athlone, Ireland.
 	May&#160;2020.
 	
 		&#160;<a href="./bibs/rao2020p1204.bib" target="_blank">[bib]</a></p>
