add url to articles and update refs

--- a/publications.html
+++ b/publications.html
@@ -179,11 +179,13 @@
 <p  class="bibentries-one-year">
   <p class="bibentry">Stephan Fremerey, Rachel Huang, Steve G&#246;ring, and Alexander Raake. <b>"Are people pixel-peeping 360&#176; videos?." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
     
+        &#160;<a href="https://www.ingentaconnect.com/content/ist/ei/2019/00002019/00000010/art00002">[url]</a>
         &#160;<a href="./bibs/fremerey2019.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging</i>. 2019.
     
+        &#160;<a href="https://ist.publisher.ingentaconnect.com/contentone/ist/ei/2019/00002019/00000010/art00015">[url]</a>
         &#160;<a href="./bibs/rao2019.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
