--- a/publications.html
+++ b/publications.html
@@ -214,7 +214,7 @@
         &#160;<a href="https://github.com/itu-p1203" target="_blank">[code]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Robitza, Werner, Kittur, Dhananjaya G, Dethof, Alexander M, G&#246;rin, Steve, Feiten, Bernhard, and Raake, Alexander. <b>"Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions." </b><i>Tenth International Conference on Quality of Multimedia Experience (QoMEX)</i>. IEEE.
+  <p class="bibentry">Robitza, Werner, Kittur, Dhananjaya G, Dethof, Alexander M, G&#246;ring, Steve, Feiten, Bernhard, and Raake, Alexander. <b>"Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions." </b><i>Tenth International Conference on Quality of Multimedia Experience (QoMEX)</i>. IEEE.
     2018.
     
          pp.&#160;1--6.
