--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="./index.html" class="logo">stg7.github.io</a>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="http://github.com/stg7/" target="_blank">
+                    <a href="https://github.com/stg7/" target="_blank">
                     <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="height:1.5em" />
                     </a>
                 </li>
@@ -112,8 +112,8 @@ Most of my developed software is publicly available on github.</p>
 </div>
 <h2>contact</h2>
 <ul>
-<li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
-<li>xmpp: stg7@jabber.ccc.de</li>
+<li>email: <a href="mailto:stg7[at]gmx.de">stg7[at]gmx.de</a></li>
+<li>xmpp: stg7[at]jabber.ccc.de</li>
 </ul>
 <h2>about</h2>
 <p>This webpage is generated using a small python script + a markdown parser.
