--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
